-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0
-
Clients with Lustre version 2.12.53 or later and any server with version < 2.12.53
-
3
-
9223372036854775807
sanity test_102ha fails with “saving trusted.big on /mnt/lustre/f102ha.sanity failed” for master (2.13.0) client and 2.12.2 servers. This test started to fail in interop testing on 03-JUNE-2019.
Looking at the client test_log, we see
== sanity test 102ha: grow xattr from inside inode to external inode ================================= 03:09:44 (1568344184) CMD: trevis-5vm8 dumpe2fs -h /dev/mapper/mds1_flakey 2>&1 | grep -E -q '(ea_inode|large_xattr)' CMD: trevis-5vm8 dumpe2fs -h /dev/mapper/mds1_flakey 2>&1 | grep -E -q '(ea_inode|large_xattr)' setting xattr of max xattr size: 1048364 CMD: trevis-5vm8 dumpe2fs -h /dev/mapper/mds1_flakey 2>&1 | grep -E -q '(ea_inode|large_xattr)' save trusted.big on /mnt/lustre/f102ha.sanity /usr/lib64/lustre/tests/sanity.sh: line 8946: /usr/bin/setfattr: Argument list too long sanity test_102ha: @@@@@@ FAIL: saving trusted.big on /mnt/lustre/f102ha.sanity failed Trace dump: = /usr/lib64/lustre/tests/test-framework.sh:6115:error() = /usr/lib64/lustre/tests/sanity.sh:8947:grow_xattr() = /usr/lib64/lustre/tests/sanity.sh:8984:test_102ha()
The patch https://review.whamcloud.com/34058 modified sanity test 102hs and the function grow_xattr() to take a “toobig” parameter.